# sdg_hub

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_migration.py  tox.ini
.github/workflows/: docs.yml  e2e.yml  integration-test.yml  lint.yml  packer.yml  pypi.yaml  test.yml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  api-reference.md  architecture.md  base-block.md  blocks.md  changelog.md  concepts.md  configuration.md  development.md  examples.md  index.html  installation.md  prompts.md  quick-start.md  web-interface.md
docs/blocks/: custom-blocks.md  evaluation-blocks.md  filtering-blocks.md  llm-blocks.md  overview.md  transform-blocks.md
docs/flows/: available_flows.md  custom_flows.md  discovery.md  overview.md
examples/AIIT/text_analysis/: structured_insights_demo.ipynb
examples/annotation/: annotation_classification.ipynb  news_classification_assessment_prompt.yaml  news_classification_flow.yaml  news_classification_prompt.yaml  revise_news_classification_prompt.yaml
examples/knowledge_generation_using_nemotron/: reasoning_sdg_financebench.ipynb  reasoning_sdg_quality.ipynb  utils.py
examples/knowledge_generation_using_nemotron/flows/: synth_knowledge1.5_nemotron_super_49b.yaml  synth_knowledge_reasoning_nemotron_super_49b_summary_diversity_cot.yaml
examples/knowledge_generation_using_nemotron/prompts/: generate_answers_cot.yaml
examples/knowledge_tuning/: README.md  knowledge_utils.py
examples/knowledge_tuning/enhanced_summary_knowledge_tuning/: .env  .env.example  README.md  document_pre_processing.ipynb  knowledge_generation.ipynb  knowledge_mixing.ipynb  knowledge_mixing_utils.py  raft_builder.py  requirements.txt
examples/knowledge_tuning/instructlab/: .gitignore  README.md  docling_v2_config.yaml  docparser_v2.py  document_pre_processing.ipynb  knowledge_generation_and_mixing.ipynb  knowledge_generation_ja.ipynb  logger_config.py
examples/knowledge_tuning/knowledge_tuning_with_reasoning_model/: README.md  reasoning_sdg.ipynb  reasoning_sdg_data_mixing.ipynb  reasoning_sdg_financebench.ipynb  reasoning_sdg_quality.ipynb  utils.py
examples/knowledge_tuning/translation_example/: README.md  create_seed_data.py  generate.py  indic_trans_server.py  nllb_server.py  requirements.txt
examples/skills_tuning/instructlab/: README.md  annotation_classification.ipynb  structured_summary.ipynb  table_manipulation.ipynb  unstructured_to_structured.ipynb
examples/text_analysis/: README.md  extract_stock_tickers.yaml  structured_insights_demo.ipynb
scripts/: ruff.sh  snyk_notebook_scan.sh
scripts/packer/: centos.pkr.hcl  setup-centos.sh
src/sdg_hub/: __init__.py  checkpointer.py  flow.py  flow_runner.py  pipeline.py  prompts.py  sdg.py
src/sdg_hub/blocks/: __init__.py  base.py  block.py  llm_utils.py  llmblock.py  openaichatblock.py  registry.py  utilblocks.py
src/sdg_hub/core/: __init__.py
src/sdg_hub/flow/: __init__.py  base.py  migration.py  registry.py  validation.py
src/sdg_hub/utils/: __init__.py  config_validation.py  error_handling.py  (+3 more)
tests/: test_checkpointer.py  test_flowrunner.py  test_pipeline.py  test_sdg.py
tests/blocks/: test_base_block.py  test_llmblock.py  test_openaichatblock.py  test_registry.py
tests/flow/: __init__.py  conftest.py  test_base.py  test_checkpointer.py  test_dataset_requirements.py  test_integration.py  test_metadata.py  test_migration.py  test_registry.py  test_time_estimation.py  test_validation.py
tests/flows/: test_flow.py  test_flow_column_validation.py  test_flow_path.py  test_flow_validation.py
tests/integration/: README.md  __init__.py
tests/utils/: test_config_validation.py  test_datautils.py  test_error_handling.py  test_flow_metrics.py  test_path_resolution.py
web_interface/: README.md  app.py  requirements.txt  test_block_types.py
web_interface/templates/: index.html
(+215 files in other folders)
